# scoreme-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  run_api.ps1
app/: __init__.py  config_loader.py  database.py  external.py  main.py  models.py  repository.py  service.py  settings.py
app/ui/: index.html
app/ui/assets/: app.js  styles.css
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
demo/: application_invalid.json  application_retry.json  application_success.json  claim_success.json  run_demo.ps1
docs/: architecture.md  assignment_traceability.md  decision_examples.md  deployment.md  judge_demo.md  presentation_notes.md
frontend/: README.md  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  samples.ts
tests/: conftest.py  test_api.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/app/workflows/: route.ts
web/lib/: db.ts  external.ts  repository.ts  service.ts  types.ts  util.ts  workflows.ts
web/workflows/: application_approval.yaml  vendor_approval.yaml
workflow-platform/: ARCHITECTURE.md  DECISION_EXAMPLES.md  README.md  docker-compose.yml
workflow-platform/backend/: Dockerfile  main.py  requirements.txt
workflow-platform/backend/api/: context.py  routes_admin.py  routes_audit.py  routes_requests.py  routes_workflows.py  schemas.py  (+1 more)
workflow-platform/frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
workflows/: claim_processing.yaml
(+64 files in other folders)
